# pbspy

./: .gitignore  MANIFEST.in  README.md  pbs.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
src/pbspy/: __init__.py  __main__.py  config.yml
tests/pbspy/: test_init.py
