# Eschew setup.py in favour of setup.cfg where possible, in line with modern
# recommendations for setuptools packaging:
# https://packaging.python.org/tutorials/packaging-projects/
[metadata]
name = pbspy
version = file: VERSION
description = Lightweight PBS job submission and monitoring.
long_description = file: README.md
author = Conrad Leonard
author_email = conrad.leonard@qimrberghofer.edu.au
license = MIT License
classifiers:
    Programming Language :: Python :: 3.11
    License :: MIT License

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.11

[options.packages.find]
where = src
